# temporary

./: README.md  test.tar.bz2
aip/aip_a1/: CMakeLists.txt  Makefile  tags
aip/aip_a1/include/jz_aip/: aie_mmap.h  ingenic_aip.h
aip/aip_a1/src/: CMakeLists.txt  ingenic_aip.c  jz_aip_hal.c  jz_aip_hal.h
aip/aip_a1/test/include/drivers/: aie_mmap.h
aip/aip_a1/test/include/model/: aip_f_mdl.h
aip/aip_a1/test/sample/aip_affine/: Makefile  aip_affine_test.c
aip/aip_a1/test/sample/aip_covent/: Makefile  aip_covent_test.c
aip/aip_a1/test/sample/aip_perspective/: Makefile  aip_perspective_test.c
aip/aip_a1/test/sample/aip_resize/: Makefile  aip_resize_test.c
aip/aip_t40/bscaler/: CHANGELOG.md  CMakeLists.txt  Makefile  README.md  tags
aip/aip_t40/bscaler/demo/: Makefile  perspective_demo.cpp  resize_demo.cpp  resize_nv12_to_nv12.cpp
aip/aip_t40/bscaler/demo/include/: aie_mmap.h  bscaler_mdl.h  bscaler_wrap.h  lzmadec.h  matrix.h  mdl_common.h  platform.h  xburst_pmonj2.h
aip/aip_t40/bscaler/demo/include/eyer/: eyer_driver.h
aip/aip_t40/bscaler/demo/include/golden/: perspective_whole_int.h
aip/aip_t40/bscaler/demo/include/mem_manager/: LocalMemMgr.h
aip/aip_t40/bscaler/image/: Meeting_1024x1024.nv12  colorbar_1024x1024.yuv  lyf_256x256.nv12
aip/aip_t40/bscaler/include/api/: bscaler_segmentation.h
aip/aip_t40/bscaler/include/model/: bscaler_mdl_api.h  lzma_private.h
aip/aip_t40/bscaler/include/model/golden/: affine_whole_int.h  perspective_whole_float.h
aip/aip_t40/bscaler/include/platform/: oram_mem.h
aip/aip_t40/bscaler/include/platform/drivers/: oram_mem.h
aip/aip_t40/bscaler/source/: CMakeLists.txt
aip/aip_t40/bscaler/source/api/: AutoTime.cpp  CMakeLists.txt  matrix.c
aip/aip_t40/bscaler/source/api/hal/: bscaler_hal.c  lzma_hw_api.c
aip/aip_t40/bscaler/source/model/: CMakeLists.txt  bscaler_mdl_api.cpp
aip/aip_t40/bscaler/source/model/golden/: affine_whole_float.cpp  perspective_whole_int.cpp
aip/aip_t40/old_aipt40/aip/demo/: CMakeLists.txt  Makefile  Makefile1  affine_demo.cpp  converter_demo.cpp  converter_demo.cpp.bk  resize_demo  resize_demo.cpp  resize_nv12_to_nv12.cpp
aip/aip_t40/old_aipt40/aip/demo/include/: Matrix.h  mdl_debug.h
aip/aip_t40/old_aipt40/aip/demo/include/golden/: affine_whole_float.h
aip/aip_t40/old_aipt40/aip/demo/include/hal/: bscaler_hal.h  lzma_hw_api.h
aip/aip_t40/old_aipt40/aip/demo/include/mem_manager/: aie_mmap.h
aip/aip_t40/old_aipt40/aip/source/platform/eyer/: CMakeLists.txt  eyer_driver.c
aip/aip_t40/old_aipt40/aip/test/: CMakeLists.txt
aip/aip_t40/old_aipt40/aip/test/api/: CMakeLists.txt  bst_and_bsc.c  bst_and_bsc1.c  converter_demo.cpp  rand_affine_api.cpp  rand_converter.cpp  rand_mix_api.cpp  rand_perspective_api.cpp  rand_resize_api.cpp  read_rand_bin.cpp  resize_zfni.cpp
aip/aip_t40/old_aipt40/aip/test/basic/: CMakeLists.txt  bsc_reset.c  bst_reset.c  read_all_reg.c
aip/aip_t40/old_aipt40/aip/test/model/: CMakeLists.txt  test_affine_api.cpp  test_perspective_api.cpp  test_resize_api.cpp
aip/aip_t40/old_aipt40/aip/test/model/evaluate/: affine_conformity.cpp  (+2 more)
aip/aip_t40/old_aipt40/aip/test/old/: CMakeLists.txt  bscaler_random.c  bscaler_random.h  rand_api.cpp  rand_api.h  t_bscaler_c.c  t_bscaler_chain_c.c  t_bscaler_t.c  t_lzma.c  test_line_mode.cpp
aip/aip_t40/old_aipt40/aip/test/performance/: CMakeLists.txt  affine_perform.cpp  converter_demo.cpp  converter_perform.cpp  perspective_perform.cpp  resize_nv2bgr_perform.cpp  resize_nv2nv_perform.cpp  resize_perform.cpp  threads_test.cpp
aip/aip_t40/old_aipt40/aip/test/vector/: CMakeLists.txt  Makefile  bs_bist.c  bs_bist_error.c  lzma_hw_api.c  t_bscaler_c.c  t_bscaler_c_t.c  t_bscaler_chain_c.c  t_bscaler_chain_c_t.c  t_bscaler_chain_t.c  t_bscaler_reg_rw.c  t_bscaler_t.c  t_lzma.c  t_vector_c.h  t_vector_c_chain.h  t_vector_c_t_c.h  t_vector_c_t_t.h  t_vector_t.h  t_vector_t_c_chain_c.h  t_vector_t_c_chain_t.h  t_vector_t_chain.h
aip/aip_t40/old_aipt40/aip/tools/: CMakeLists.txt
aip/aip_t40/old_aipt40/aip/tools/python/: coverage.py
aip/aip_t40/old_aipt40/aip/tools/random_api/: gen_random_bin.cpp  random_api.cpp  random_api.h
aip/aip_t40/old_aipt40/aip/tools/random_vector/: CMakeLists.txt  dump_c_vector.c  dump_c_vector.h  dump_t_vector.c  dump_t_vector.h  gen_affine_vector.cpp  gen_c_chain_vector.c  gen_c_vector.c  gen_t_chain_vector.c  gen_t_vector.c  random_vector.c  random_vector.h
aip/aip_t40/old_aipt40/aip/tools/real_param/: gen_real_param.cpp
aip/aip_t40/old_aipt40/aip/tools/script/: auto_run.sh
aip/aip_t40/old_aipt40/aip_memmgr/: CMakeLists.txt
aip/aip_t40/old_aipt40/aip_memmgr/demo/: readme.txt
aip/aip_t40/old_aipt40/aip_memmgr/demo/cash/: nmem_test  nmem_test.cc  readme.txt
aip/aip_t40/old_aipt40/aip_memmgr/demo/document/: yolov3_run_uclibc_test_bin_public
aip/aip_t40/old_aipt40/aip_memmgr/demo/test/: msg_send.c  msg_send_glibc
aip/aip_t40/old_aipt40/aip_memmgr/src/: CMakeLists.txt
aip/aip_t40/old_aipt40/aip_memmgr/src/drivers/: aie_mmap.c  aie_mmap.h  macro_def.h  soc_nna.h
aip/aip_t40/old_aipt40/aip_memmgr/src/mem_manager/: LocalMemMgr.c.bak  LocalMemMgr.h  alloc_manager.h  ddr_mem.cc  ddr_mem.h  duplex_list.h  imp_alloc_api.c  oram_mem.c  oram_mem.h  test_mem.c
aip/aip_t40/old_aipt40/drivers/aie_nna_driver/source/: CMakeLists.txt  LocalMemMgr.c  Makefile  aie_mmap.c  bootrom.S  ddr_mem.c  dma_func.c  nna_dma_driver_v4.c  nna_dma_memory_v1.c  oram_mem.c
aip/driver/: CMakeLists.txt  Makefile  README.md  tags
aip/driver/7.2.0/2.29/include/mem_manager/: alloc_manager.h  data.h  ddr_mem.h  duplex_list.h
aip/driver/src/: CMakeLists.txt
aip/driver/src/drivers/: aie_mmap.c  aie_mmap.h  macro_def.h  soc_nna.h  utils.c
aip/driver/src/mem_manager/: LocalMemMgr.h  buf_list.cc  buf_list.h  ddr_mem.cc  imp_alloc_api.c  oram.cc  oram.h
lib/: .gitignore  CMakeLists.txt  Makefile  README.md  tags  toolchain.cmake
lib/doc/: application-programming-interface.md
lib/include/: iaic.h  iaic_core.h  iaic_ioctl.h  iaic_list.h
lib/src/: CMakeLists.txt  iaic_api.c  iaic_bo.c  iaic_core.c
(+278 files in other folders)
